# orx-math-model

./: Cargo.toml  README.md
examples/: knapsack.rs  mcfp.rs  mcfp_with_data_trait.rs
orx-math-model/: Cargo.toml
orx-math-model/src/: mcnf.rs
orx-math-model/src/data_structs/: current_set_indices.rs  expr_sum_refs.rs
orx-math-model/src/modeling/: model_data.rs  model_data_ref.rs  reference.rs  stages.rs
orx-math-model/src/numerics/: mod.rs  num.rs  ops.rs
orx-math-model/src/str_expr/: mod.rs
src/: lib.rs  main.rs  model.rs  model_bag.rs  model_data.rs  no_std_types.rs  prelude.rs  raised_set.rs  set.rs  stages.rs  wip.rs
src/arch/: main.rs
src/arch/data_structs/: forall_set_refs.rs  funvec.rs  var_scalar_refs.rs
src/arch/modeling/: model.rs
src/arch2/modeling/: build_stage.rs  current_set_elements.rs  mod_ref.rs  symbol.rs
src/data/: data.rs  data_builder.rs  mod.rs  number.rs
src/data/par_data/: fun_par_data.rs  mod.rs  par_and_data.rs  par_data_collection.rs  par_data_dim0.rs  par_data_dim1.rs  zero.rs
src/data/set_data/: empty.rs  fun_set.rs  fun_set_data.rs  (+6 more)
src/data_structs/: expr_term_refs.rs  mod.rs  smallvec.rs  sum_over_set_refs.rs
src/draft/: knapsack.rs  knapsack_data_map.rs  knapsack_model.rs  mod.rs  par.rs  par_data.rs  scalar.rs  set.rs  set_data.rs
src/modeling/: functions.rs  mod.rs  modeler.rs  sym_ref.rs
src/str_expr/: index.rs  ops.rs
src/symbols/: definition.rs  dep_set_indices.rs  mod.rs  sym.rs  symbol.rs  symbol_collection.rs  symbol_data.rs  symbol_data_collection.rs  symbol_definition.rs  symbol_map.rs  symbol_meta.rs  symbol_ref.rs  symbol_ref_core.rs
tests/: sets.rs
(+249 files in other folders)
