[package]
name = "orx-math-model"
version = "1.0.3"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "Traits to unify all vectors!"
license = "MIT"
repository = "https://github.com/orxfun/orx-v/"
keywords = ["optimization", "mathematical", "model", "linear", "solver"]
categories = ["mathematics", "algorithms", "science", "no-std"]

[dependencies]

[features]
default = ["std"]
std = []
