[package]
name = "orx-math-model"
version = "1.0.3"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "Traits to unify all vectors!"
license = "MIT"
repository = "https://github.com/orxfun/orx-v/"
keywords = ["optimization", "mathematical", "model", "linear", "solver"]
categories = ["mathematics", "algorithms", "science", "no-std"]

[dependencies]
orx-imp-vec = "2.17"
orx-pinned-vec = "3.21"
orx-split-vec = "3.22"

[features]
default = ["std"]
std = []
